# Gym_Sheets

./: CMakeLists.txt  LICENSE  Main.qml  README.md  ToDo.txt  main.cpp
AppQml/: AppButton.qml  AppLabel.qml  AppTextField.qml  qmldir
CPP/: svg_icon.cpp  svg_icon.h  thread_manager.cpp  thread_manager.h  thread_worker.cpp  thread_worker.h
GeneralAppQml/: qmldir
GeneralQml/: BaseScreen.qml  Colors.qml  Fonts.qml  MyButton.qml  MyLabel.qml  MyRectangle.qml  MyTextField.qml  qmldir
GeneralQml/Singletons/: Colors.qml  ScreenManager.qml
PreviewQml/: SvgIcon.qml  ThreadManager.qml  qmldir
SQL/: Create.sql  Defaults.sql  Exercises.sql  Records.sql  Series.sql  SeriesType.sql  User.sql
ScreensQml/: CompleteDay_Screen.qml  CompleteDay_Screen_Logic.js  Exercise_Screen.qml  Exercise_Screen_Logic.js  Main_Screen.qml  Testing_Screen.qml  qmldir
android/: AndroidManifest.xml
